parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> operacion
Rule 2     statement -> operacion statement
Rule 3     operacion -> suma
Rule 4     operacion -> multiplicacion
Rule 5     suma -> TOKEN EQUALS NUMBER PLUS NUMBER
Rule 6     suma -> TOKEN EQUALS CHARACTER PLUS NUMBER
Rule 7     suma -> TOKEN EQUALS NUMBER PLUS CHARACTER
Rule 8     suma -> TOKEN EQUALS CHARACTER PLUS CHARACTER
Rule 9     suma -> TOKEN EQUALS NUMBER PLUS TOKEN
Rule 10    suma -> TOKEN EQUALS TOKEN PLUS NUMBER
Rule 11    suma -> TOKEN EQUALS TOKEN PLUS CHARACTER
Rule 12    suma -> TOKEN EQUALS CHARACTER PLUS TOKEN
Rule 13    suma -> TOKEN EQUALS TOKEN PLUS TOKEN
Rule 14    multiplicacion -> TOKEN EQUALS NUMBER TIMES NUMBER
Rule 15    multiplicacion -> TOKEN EQUALS CHARACTER TIMES NUMBER
Rule 16    multiplicacion -> TOKEN EQUALS NUMBER TIMES CHARACTER
Rule 17    multiplicacion -> TOKEN EQUALS CHARACTER TIMES CHARACTER
Rule 18    multiplicacion -> TOKEN EQUALS NUMBER TIMES TOKEN
Rule 19    multiplicacion -> TOKEN EQUALS TOKEN TIMES NUMBER
Rule 20    multiplicacion -> TOKEN EQUALS TOKEN TIMES CHARACTER
Rule 21    multiplicacion -> TOKEN EQUALS CHARACTER TIMES TOKEN
Rule 22    multiplicacion -> TOKEN EQUALS TOKEN TIMES TOKEN

Terminals, with rules where they appear

CHARACTER            : 6 7 8 8 11 12 15 16 17 17 20 21
EQUALS               : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
NUMBER               : 5 5 6 7 9 10 14 14 15 16 18 19
PLUS                 : 5 6 7 8 9 10 11 12 13
TIMES                : 14 15 16 17 18 19 20 21 22
TOKEN                : 5 6 7 8 9 9 10 10 11 11 12 12 13 13 13 14 15 16 17 18 18 19 19 20 20 21 21 22 22 22
error                : 

Nonterminals, with rules where they appear

multiplicacion       : 4
operacion            : 1 2
statement            : 2 0
suma                 : 3

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . operacion
    (2) statement -> . operacion statement
    (3) operacion -> . suma
    (4) operacion -> . multiplicacion
    (5) suma -> . TOKEN EQUALS NUMBER PLUS NUMBER
    (6) suma -> . TOKEN EQUALS CHARACTER PLUS NUMBER
    (7) suma -> . TOKEN EQUALS NUMBER PLUS CHARACTER
    (8) suma -> . TOKEN EQUALS CHARACTER PLUS CHARACTER
    (9) suma -> . TOKEN EQUALS NUMBER PLUS TOKEN
    (10) suma -> . TOKEN EQUALS TOKEN PLUS NUMBER
    (11) suma -> . TOKEN EQUALS TOKEN PLUS CHARACTER
    (12) suma -> . TOKEN EQUALS CHARACTER PLUS TOKEN
    (13) suma -> . TOKEN EQUALS TOKEN PLUS TOKEN
    (14) multiplicacion -> . TOKEN EQUALS NUMBER TIMES NUMBER
    (15) multiplicacion -> . TOKEN EQUALS CHARACTER TIMES NUMBER
    (16) multiplicacion -> . TOKEN EQUALS NUMBER TIMES CHARACTER
    (17) multiplicacion -> . TOKEN EQUALS CHARACTER TIMES CHARACTER
    (18) multiplicacion -> . TOKEN EQUALS NUMBER TIMES TOKEN
    (19) multiplicacion -> . TOKEN EQUALS TOKEN TIMES NUMBER
    (20) multiplicacion -> . TOKEN EQUALS TOKEN TIMES CHARACTER
    (21) multiplicacion -> . TOKEN EQUALS CHARACTER TIMES TOKEN
    (22) multiplicacion -> . TOKEN EQUALS TOKEN TIMES TOKEN

    TOKEN           shift and go to state 5

    statement                      shift and go to state 1
    operacion                      shift and go to state 2
    suma                           shift and go to state 3
    multiplicacion                 shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (1) statement -> operacion .
    (2) statement -> operacion . statement
    (1) statement -> . operacion
    (2) statement -> . operacion statement
    (3) operacion -> . suma
    (4) operacion -> . multiplicacion
    (5) suma -> . TOKEN EQUALS NUMBER PLUS NUMBER
    (6) suma -> . TOKEN EQUALS CHARACTER PLUS NUMBER
    (7) suma -> . TOKEN EQUALS NUMBER PLUS CHARACTER
    (8) suma -> . TOKEN EQUALS CHARACTER PLUS CHARACTER
    (9) suma -> . TOKEN EQUALS NUMBER PLUS TOKEN
    (10) suma -> . TOKEN EQUALS TOKEN PLUS NUMBER
    (11) suma -> . TOKEN EQUALS TOKEN PLUS CHARACTER
    (12) suma -> . TOKEN EQUALS CHARACTER PLUS TOKEN
    (13) suma -> . TOKEN EQUALS TOKEN PLUS TOKEN
    (14) multiplicacion -> . TOKEN EQUALS NUMBER TIMES NUMBER
    (15) multiplicacion -> . TOKEN EQUALS CHARACTER TIMES NUMBER
    (16) multiplicacion -> . TOKEN EQUALS NUMBER TIMES CHARACTER
    (17) multiplicacion -> . TOKEN EQUALS CHARACTER TIMES CHARACTER
    (18) multiplicacion -> . TOKEN EQUALS NUMBER TIMES TOKEN
    (19) multiplicacion -> . TOKEN EQUALS TOKEN TIMES NUMBER
    (20) multiplicacion -> . TOKEN EQUALS TOKEN TIMES CHARACTER
    (21) multiplicacion -> . TOKEN EQUALS CHARACTER TIMES TOKEN
    (22) multiplicacion -> . TOKEN EQUALS TOKEN TIMES TOKEN

    $end            reduce using rule 1 (statement -> operacion .)
    TOKEN           shift and go to state 5

    operacion                      shift and go to state 2
    statement                      shift and go to state 6
    suma                           shift and go to state 3
    multiplicacion                 shift and go to state 4

state 3

    (3) operacion -> suma .

    TOKEN           reduce using rule 3 (operacion -> suma .)
    $end            reduce using rule 3 (operacion -> suma .)


state 4

    (4) operacion -> multiplicacion .

    TOKEN           reduce using rule 4 (operacion -> multiplicacion .)
    $end            reduce using rule 4 (operacion -> multiplicacion .)


state 5

    (5) suma -> TOKEN . EQUALS NUMBER PLUS NUMBER
    (6) suma -> TOKEN . EQUALS CHARACTER PLUS NUMBER
    (7) suma -> TOKEN . EQUALS NUMBER PLUS CHARACTER
    (8) suma -> TOKEN . EQUALS CHARACTER PLUS CHARACTER
    (9) suma -> TOKEN . EQUALS NUMBER PLUS TOKEN
    (10) suma -> TOKEN . EQUALS TOKEN PLUS NUMBER
    (11) suma -> TOKEN . EQUALS TOKEN PLUS CHARACTER
    (12) suma -> TOKEN . EQUALS CHARACTER PLUS TOKEN
    (13) suma -> TOKEN . EQUALS TOKEN PLUS TOKEN
    (14) multiplicacion -> TOKEN . EQUALS NUMBER TIMES NUMBER
    (15) multiplicacion -> TOKEN . EQUALS CHARACTER TIMES NUMBER
    (16) multiplicacion -> TOKEN . EQUALS NUMBER TIMES CHARACTER
    (17) multiplicacion -> TOKEN . EQUALS CHARACTER TIMES CHARACTER
    (18) multiplicacion -> TOKEN . EQUALS NUMBER TIMES TOKEN
    (19) multiplicacion -> TOKEN . EQUALS TOKEN TIMES NUMBER
    (20) multiplicacion -> TOKEN . EQUALS TOKEN TIMES CHARACTER
    (21) multiplicacion -> TOKEN . EQUALS CHARACTER TIMES TOKEN
    (22) multiplicacion -> TOKEN . EQUALS TOKEN TIMES TOKEN

    EQUALS          shift and go to state 7


state 6

    (2) statement -> operacion statement .

    $end            reduce using rule 2 (statement -> operacion statement .)


state 7

    (5) suma -> TOKEN EQUALS . NUMBER PLUS NUMBER
    (6) suma -> TOKEN EQUALS . CHARACTER PLUS NUMBER
    (7) suma -> TOKEN EQUALS . NUMBER PLUS CHARACTER
    (8) suma -> TOKEN EQUALS . CHARACTER PLUS CHARACTER
    (9) suma -> TOKEN EQUALS . NUMBER PLUS TOKEN
    (10) suma -> TOKEN EQUALS . TOKEN PLUS NUMBER
    (11) suma -> TOKEN EQUALS . TOKEN PLUS CHARACTER
    (12) suma -> TOKEN EQUALS . CHARACTER PLUS TOKEN
    (13) suma -> TOKEN EQUALS . TOKEN PLUS TOKEN
    (14) multiplicacion -> TOKEN EQUALS . NUMBER TIMES NUMBER
    (15) multiplicacion -> TOKEN EQUALS . CHARACTER TIMES NUMBER
    (16) multiplicacion -> TOKEN EQUALS . NUMBER TIMES CHARACTER
    (17) multiplicacion -> TOKEN EQUALS . CHARACTER TIMES CHARACTER
    (18) multiplicacion -> TOKEN EQUALS . NUMBER TIMES TOKEN
    (19) multiplicacion -> TOKEN EQUALS . TOKEN TIMES NUMBER
    (20) multiplicacion -> TOKEN EQUALS . TOKEN TIMES CHARACTER
    (21) multiplicacion -> TOKEN EQUALS . CHARACTER TIMES TOKEN
    (22) multiplicacion -> TOKEN EQUALS . TOKEN TIMES TOKEN

    NUMBER          shift and go to state 9
    CHARACTER       shift and go to state 10
    TOKEN           shift and go to state 8


state 8

    (10) suma -> TOKEN EQUALS TOKEN . PLUS NUMBER
    (11) suma -> TOKEN EQUALS TOKEN . PLUS CHARACTER
    (13) suma -> TOKEN EQUALS TOKEN . PLUS TOKEN
    (19) multiplicacion -> TOKEN EQUALS TOKEN . TIMES NUMBER
    (20) multiplicacion -> TOKEN EQUALS TOKEN . TIMES CHARACTER
    (22) multiplicacion -> TOKEN EQUALS TOKEN . TIMES TOKEN

    PLUS            shift and go to state 11
    TIMES           shift and go to state 12


state 9

    (5) suma -> TOKEN EQUALS NUMBER . PLUS NUMBER
    (7) suma -> TOKEN EQUALS NUMBER . PLUS CHARACTER
    (9) suma -> TOKEN EQUALS NUMBER . PLUS TOKEN
    (14) multiplicacion -> TOKEN EQUALS NUMBER . TIMES NUMBER
    (16) multiplicacion -> TOKEN EQUALS NUMBER . TIMES CHARACTER
    (18) multiplicacion -> TOKEN EQUALS NUMBER . TIMES TOKEN

    PLUS            shift and go to state 13
    TIMES           shift and go to state 14


state 10

    (6) suma -> TOKEN EQUALS CHARACTER . PLUS NUMBER
    (8) suma -> TOKEN EQUALS CHARACTER . PLUS CHARACTER
    (12) suma -> TOKEN EQUALS CHARACTER . PLUS TOKEN
    (15) multiplicacion -> TOKEN EQUALS CHARACTER . TIMES NUMBER
    (17) multiplicacion -> TOKEN EQUALS CHARACTER . TIMES CHARACTER
    (21) multiplicacion -> TOKEN EQUALS CHARACTER . TIMES TOKEN

    PLUS            shift and go to state 15
    TIMES           shift and go to state 16


state 11

    (10) suma -> TOKEN EQUALS TOKEN PLUS . NUMBER
    (11) suma -> TOKEN EQUALS TOKEN PLUS . CHARACTER
    (13) suma -> TOKEN EQUALS TOKEN PLUS . TOKEN

    NUMBER          shift and go to state 18
    CHARACTER       shift and go to state 19
    TOKEN           shift and go to state 17


state 12

    (19) multiplicacion -> TOKEN EQUALS TOKEN TIMES . NUMBER
    (20) multiplicacion -> TOKEN EQUALS TOKEN TIMES . CHARACTER
    (22) multiplicacion -> TOKEN EQUALS TOKEN TIMES . TOKEN

    NUMBER          shift and go to state 21
    CHARACTER       shift and go to state 22
    TOKEN           shift and go to state 20


state 13

    (5) suma -> TOKEN EQUALS NUMBER PLUS . NUMBER
    (7) suma -> TOKEN EQUALS NUMBER PLUS . CHARACTER
    (9) suma -> TOKEN EQUALS NUMBER PLUS . TOKEN

    NUMBER          shift and go to state 24
    CHARACTER       shift and go to state 25
    TOKEN           shift and go to state 23


state 14

    (14) multiplicacion -> TOKEN EQUALS NUMBER TIMES . NUMBER
    (16) multiplicacion -> TOKEN EQUALS NUMBER TIMES . CHARACTER
    (18) multiplicacion -> TOKEN EQUALS NUMBER TIMES . TOKEN

    NUMBER          shift and go to state 27
    CHARACTER       shift and go to state 28
    TOKEN           shift and go to state 26


state 15

    (6) suma -> TOKEN EQUALS CHARACTER PLUS . NUMBER
    (8) suma -> TOKEN EQUALS CHARACTER PLUS . CHARACTER
    (12) suma -> TOKEN EQUALS CHARACTER PLUS . TOKEN

    NUMBER          shift and go to state 31
    CHARACTER       shift and go to state 30
    TOKEN           shift and go to state 29


state 16

    (15) multiplicacion -> TOKEN EQUALS CHARACTER TIMES . NUMBER
    (17) multiplicacion -> TOKEN EQUALS CHARACTER TIMES . CHARACTER
    (21) multiplicacion -> TOKEN EQUALS CHARACTER TIMES . TOKEN

    NUMBER          shift and go to state 34
    CHARACTER       shift and go to state 33
    TOKEN           shift and go to state 32


state 17

    (13) suma -> TOKEN EQUALS TOKEN PLUS TOKEN .

    TOKEN           reduce using rule 13 (suma -> TOKEN EQUALS TOKEN PLUS TOKEN .)
    $end            reduce using rule 13 (suma -> TOKEN EQUALS TOKEN PLUS TOKEN .)


state 18

    (10) suma -> TOKEN EQUALS TOKEN PLUS NUMBER .

    TOKEN           reduce using rule 10 (suma -> TOKEN EQUALS TOKEN PLUS NUMBER .)
    $end            reduce using rule 10 (suma -> TOKEN EQUALS TOKEN PLUS NUMBER .)


state 19

    (11) suma -> TOKEN EQUALS TOKEN PLUS CHARACTER .

    TOKEN           reduce using rule 11 (suma -> TOKEN EQUALS TOKEN PLUS CHARACTER .)
    $end            reduce using rule 11 (suma -> TOKEN EQUALS TOKEN PLUS CHARACTER .)


state 20

    (22) multiplicacion -> TOKEN EQUALS TOKEN TIMES TOKEN .

    TOKEN           reduce using rule 22 (multiplicacion -> TOKEN EQUALS TOKEN TIMES TOKEN .)
    $end            reduce using rule 22 (multiplicacion -> TOKEN EQUALS TOKEN TIMES TOKEN .)


state 21

    (19) multiplicacion -> TOKEN EQUALS TOKEN TIMES NUMBER .

    TOKEN           reduce using rule 19 (multiplicacion -> TOKEN EQUALS TOKEN TIMES NUMBER .)
    $end            reduce using rule 19 (multiplicacion -> TOKEN EQUALS TOKEN TIMES NUMBER .)


state 22

    (20) multiplicacion -> TOKEN EQUALS TOKEN TIMES CHARACTER .

    TOKEN           reduce using rule 20 (multiplicacion -> TOKEN EQUALS TOKEN TIMES CHARACTER .)
    $end            reduce using rule 20 (multiplicacion -> TOKEN EQUALS TOKEN TIMES CHARACTER .)


state 23

    (9) suma -> TOKEN EQUALS NUMBER PLUS TOKEN .

    TOKEN           reduce using rule 9 (suma -> TOKEN EQUALS NUMBER PLUS TOKEN .)
    $end            reduce using rule 9 (suma -> TOKEN EQUALS NUMBER PLUS TOKEN .)


state 24

    (5) suma -> TOKEN EQUALS NUMBER PLUS NUMBER .

    TOKEN           reduce using rule 5 (suma -> TOKEN EQUALS NUMBER PLUS NUMBER .)
    $end            reduce using rule 5 (suma -> TOKEN EQUALS NUMBER PLUS NUMBER .)


state 25

    (7) suma -> TOKEN EQUALS NUMBER PLUS CHARACTER .

    TOKEN           reduce using rule 7 (suma -> TOKEN EQUALS NUMBER PLUS CHARACTER .)
    $end            reduce using rule 7 (suma -> TOKEN EQUALS NUMBER PLUS CHARACTER .)


state 26

    (18) multiplicacion -> TOKEN EQUALS NUMBER TIMES TOKEN .

    TOKEN           reduce using rule 18 (multiplicacion -> TOKEN EQUALS NUMBER TIMES TOKEN .)
    $end            reduce using rule 18 (multiplicacion -> TOKEN EQUALS NUMBER TIMES TOKEN .)


state 27

    (14) multiplicacion -> TOKEN EQUALS NUMBER TIMES NUMBER .

    TOKEN           reduce using rule 14 (multiplicacion -> TOKEN EQUALS NUMBER TIMES NUMBER .)
    $end            reduce using rule 14 (multiplicacion -> TOKEN EQUALS NUMBER TIMES NUMBER .)


state 28

    (16) multiplicacion -> TOKEN EQUALS NUMBER TIMES CHARACTER .

    TOKEN           reduce using rule 16 (multiplicacion -> TOKEN EQUALS NUMBER TIMES CHARACTER .)
    $end            reduce using rule 16 (multiplicacion -> TOKEN EQUALS NUMBER TIMES CHARACTER .)


state 29

    (12) suma -> TOKEN EQUALS CHARACTER PLUS TOKEN .

    TOKEN           reduce using rule 12 (suma -> TOKEN EQUALS CHARACTER PLUS TOKEN .)
    $end            reduce using rule 12 (suma -> TOKEN EQUALS CHARACTER PLUS TOKEN .)


state 30

    (8) suma -> TOKEN EQUALS CHARACTER PLUS CHARACTER .

    TOKEN           reduce using rule 8 (suma -> TOKEN EQUALS CHARACTER PLUS CHARACTER .)
    $end            reduce using rule 8 (suma -> TOKEN EQUALS CHARACTER PLUS CHARACTER .)


state 31

    (6) suma -> TOKEN EQUALS CHARACTER PLUS NUMBER .

    TOKEN           reduce using rule 6 (suma -> TOKEN EQUALS CHARACTER PLUS NUMBER .)
    $end            reduce using rule 6 (suma -> TOKEN EQUALS CHARACTER PLUS NUMBER .)


state 32

    (21) multiplicacion -> TOKEN EQUALS CHARACTER TIMES TOKEN .

    TOKEN           reduce using rule 21 (multiplicacion -> TOKEN EQUALS CHARACTER TIMES TOKEN .)
    $end            reduce using rule 21 (multiplicacion -> TOKEN EQUALS CHARACTER TIMES TOKEN .)


state 33

    (17) multiplicacion -> TOKEN EQUALS CHARACTER TIMES CHARACTER .

    TOKEN           reduce using rule 17 (multiplicacion -> TOKEN EQUALS CHARACTER TIMES CHARACTER .)
    $end            reduce using rule 17 (multiplicacion -> TOKEN EQUALS CHARACTER TIMES CHARACTER .)


state 34

    (15) multiplicacion -> TOKEN EQUALS CHARACTER TIMES NUMBER .

    TOKEN           reduce using rule 15 (multiplicacion -> TOKEN EQUALS CHARACTER TIMES NUMBER .)
    $end            reduce using rule 15 (multiplicacion -> TOKEN EQUALS CHARACTER TIMES NUMBER .)

